Add new workflow for building the snap package