@@ -75,29 +75,20 @@ they will trigger only when a new version of the application is released (a new 
 ## Caveats
 
 ### JLink
-`jlink` requires that all modules on the module path have a `module-info.class` — they must be proper named modules, 
-not automatic modules (`*.jar` files that are dropped in the `classpath`). JavaFX satisfies this since it has been fully 
-modularized for years. However, if you introduce any third-party dependency (e.g. `junit`, `slf4j`, `logback`, etc...) 
-that is still a plain classpath JAR (no module-info), it becomes an automatic module and `jlink` will refuse to include 
-it.
+`jlink` requires that all modules on the module path have a `module-info.class` — they must be proper named modules,
+not automatic modules (`*.jar` files placed on the classpath). JavaFX satisfies this since it has been fully
+modularized for years.
 
-At the moment the way this is solved is by using the `maven-dependency-plugin` and copying the modular dependencies
-under `/target/lib/modular` and the non-modular dependencies (pain jar files in the classpath) under `/target/lib/classpath`.
-Later on when executing the application from the command line, including all the `*.jar` files in the directory 
-`target/lib/classpath` in the `--class-path` option. 
-Finally including the option `--add-reads` with the keyword `ALL-UNNAMED`. `ALL-UNNAMED` is a special JVM token meaning 
-"the unnamed module" (i.e. the classpath). This is the quickest fix and perfectly legitimate for dependencies that 
-aren't yet proper modules. You can see the script `/utils/run_app.sh` for the entire functionality:
+All other runtime dependencies (SLF4J 2.x, Logback 1.5.x) are also named modules, so every JAR lands in a single
+flat `target/lib/` directory and the application launches with a pure `--module-path`:
+
 ```bash
 exec java \
-  --module-path "$TARGET_DIR/sudoku-1.0-SNAPSHOT.jar:$TARGET_DIR/lib/modular" \
-  --class-path "$CP" \
-  --add-reads com.franciscoguemes.sudoku=ALL-UNNAMED \
+  --module-path "$TARGET_DIR/sudoku-1.0-SNAPSHOT.jar:$TARGET_DIR/lib" \
   --enable-native-access=javafx.graphics \
-  --module com.franciscoguemes.sudoku/com.franciscoguemes.sudoku.Launcher \
+  --module com.franciscoguemes.sudoku/com.franciscoguemes.sudoku.Launcher
 ```
 
-As you can see this solution is not scalable, this is just a workaround for allowing the pipelines to work.
-The practical mitigation this problem is the `moditect` maven plugin, which can generate module-info descriptors for 
-non-modular JARs.
+Should a future dependency ship without a `module-info.class`, the `moditect-maven-plugin` (already wired into
+`pom.xml`) can patch it with a generated descriptor. See the **Adding New Dependencies** section in `README.md`.
 
